feat: improve mobile responsiveness and fix component errors
- Add hamburger menu for mobile navigation
- Move wallet and theme toggle to mobile menu
- Fix useColorModeValue and Select component imports
- Add FormHelperText component
- Improve mobile layout and alignment
- Update navigation structure for better UX

--- a/trenchi-frontend/public/index.html
+++ b/trenchi-frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Match. Chat. Trench. built on Solana - The first decentralized dating platform for crypto enthusiasts."
+      content="Match. Chat. Trench. built on Solana - The first decentralized dating platform for web3."
     />
     <meta
       name="keywords"
